--- a/index.html
+++ b/index.html
@@ -1,84 +1,52 @@
 <!DOCTYPE html>
 <html lang="e" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Juan Rojo | Tema 2 | Semántica Web</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="shortcut icon" href="./img/logo.ico" type="image/x-icon">
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Juan Rojo | Tema 2 | Semántica Web</title>
-  <style>
-    body {
-      font-family: sans-serif;
-    }
-
-    div {
-      margin: 20px auto;
-    }
-
-    h1 {
-      text-align: center;
-      font-size: 40px;
-    }
-
-    fieldset {
-      border-radius: 10px;
-      border: 3px #123f59 solid;
-    }
-
-    legend {
-      text-align: center;
-      font-size: 20px;
-    }
-
-    button {
-      height: 30px;
-      width: 100px;
-      margin: 0 5px;
-    }
-
-    label {
-      margin-right: 20px;
-    }
-
-    span {
-      margin-right: 20px;
-    }
-
-    p {
-      text-align: center;
-      font-size: 20px;
-      color: blue;
-    }
-  </style>
-</head>
-
-<body>
-  <main>
-    <h1>Taller Evaluativo | Tema 2 | Semántica Web</h1>
-    <form action="https://formspree.io/f/mdoyoelj" method="post">
-      <fieldset>
-        <legend>Por favor llene el siguiente formulario de contacto</legend>
-        <div>
-          <label for="name">Nombre</label>
-          <input type="text" name="nombre" value="" id="name" required>
-        </div>
-        <div>
-          <label for="phone">Número de telefono</label>
-          <input type="number" name="telefono" value="" id="phone" required>
-        </div>
-        <div>
-          <span>Sexo</span>
-          <input type="radio" id="male" name="gender" value="Hombre" required>
-          <label for="male">Hombre</label>
-          <input type="radio" id="female" name="gender" value="Mujer" required>
-          <label for="female">Mujer</label>
-        </div>
-        <div>
-          <button type="submit" name="button">Enviar</button>
-          <button type="reset" name="button">Borrar</button>
-        </div>
-      </fieldset>
-    </form>
-    <p>Juan José Rojo Arenas</p>
-  </main>
-</body>
-
+  <body>
+    <main>
+      <h1>Taller Evaluativo | Tema 2 | Semántica Web</h1>
+      <form action="https://formspree.io/f/mdoyoelj" method="post">
+        <fieldset>
+          <legend>Por favor llene el siguiente formulario de contacto</legend>
+          <div>
+            <label for="name">Nombre</label>
+            <input type="text" name="nombre" value="" id="name" required />
+          </div>
+          <div>
+            <label for="phone">Número de telefono</label>
+            <input type="number" name="telefono" value="" id="phone" required />
+          </div>
+          <div>
+            <span>Sexo</span>
+            <input
+              type="radio"
+              id="male"
+              name="gender"
+              value="Hombre"
+              required
+            />
+            <label for="male">Hombre</label>
+            <input
+              type="radio"
+              id="female"
+              name="gender"
+              value="Mujer"
+              required
+            />
+            <label for="female">Mujer</label>
+          </div>
+          <div>
+            <button type="submit" name="button">Enviar</button>
+            <button type="reset" name="button">Borrar</button>
+          </div>
+        </fieldset>
+      </form>
+      <p>Juan José Rojo Arenas &copy;</p>
+    </main>
+  </body>
 </html>
